--- a/KV.html
+++ b/KV.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Document</title>
+    <title>Контрольные вопросы</title>
 </head>
 <body>
-Фэсапщи! (Здорово!)
+    <ul type="circle">
+        <lh><strong>Ответы на контрольные вопросы:</strong><lh>
+        <li>Что такое «система контроля версий»?<li>
+        <li>К какому типу VSC относится? В чём главное отличие от других типов?</li>
+        <li>В чём заключается преимущество использование Git?</li>
+        <li>Какие команды Git вы знаете?</li>
+        <li>В чём отличие Git и Git Hub?</li>
+        </ul>
 </body>
 </html>
