--- a/KV.html
+++ b/KV.html
@@ -7,12 +7,21 @@
 </head>
 <body>
     <ul type="circle">
-        <lh><strong>Ответы на контрольные вопросы:</strong><lh>
+        <lh><strong>Контрольные вопросы:</strong><lh>
         <li>Что такое «система контроля версий»?<li>
-        <li>К какому типу VSC относится? В чём главное отличие от других типов?</li>
-        <li>В чём заключается преимущество использование Git?</li>
-        <li>Какие команды Git вы знаете?</li>
-        <li>В чём отличие Git и Git Hub?</li>
+        <li>К какому типу VSC относится Git? В чём главное отличие от других типов?
+        <li>В чём заключается преимущество использование Git?
+        <li>Какие команды Git вы знаете?
+        <li>В чём отличие Git и Git Hub?
         </ul>
+
+        <ol type = "1">
+            <lh><strong>Ответы:</strong></lh>
+            <li>Система контроля версий - это программное обеспечение, которое позволяет разработчикам взаимодействовать с версиями рабочих проектов: создавать, перемещать, структурировать и т.д.
+            <li>Система управления версиями Git работает по принципу распределенной (децентрализованной) системы контроля версий, в которой каждый участник команды имеет полную копию всех данных проекта.
+            <li>Git позволяет легко создавать резервные копии и отслеживать изменения в коде на протяжении всей истории проекта. Git автоматически фиксирует и публикует изменения, вносимые сотрудниками, что значительно повышает скорость и эффективность работы над проектом.
+            <li>git init, git add, git config, git commit.
+            <li>Разница заключается в том, что Git - это сама программа, которая осуществляет контроль версий, а Github - это сайт, где можно хранить репозитории, созданные в Git.
+            </ol>
 </body>
 </html>
